--- a/analysis_prep.ipynb
+++ b/analysis_prep.ipynb
@@ -37,7 +37,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "# cpu for latency measurements\n",
-    "device = torch.device('cuda')\n",
+    "device = torch.device('cpu')\n",
     "\n",
     "# make the output deterministic\n",
     "SEED = 7\n",
